--- a/hugo.yaml
+++ b/hugo.yaml
@@ -11,7 +11,6 @@ pygmentsUseClasses: true
 
 disableKinds: "RSS" #So we don't see the "RSS" auto thing
 
-params:
 
 
 minify:
@@ -98,6 +97,7 @@ params:
     hidden: false # hide everywhere but not in structured data
     hiddenInList: false # hide on list pages and home
     hiddenInSingle: false # hide on single page
+    responsiveImages: true
 
   # for search
   # https://fusejs.io/api/options.html
