--- a/hugo.yaml
+++ b/hugo.yaml
@@ -97,7 +97,7 @@ params:
     hidden: false # hide everywhere but not in structured data
     hiddenInList: false # hide on list pages and home
     hiddenInSingle: false # hide on single page
-    responsiveImages: true
+    #responsiveImages: true
 
   # for search
   # https://fusejs.io/api/options.html
